feat: info carousel

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -242,11 +242,12 @@
               class="card-ocensa-carousel position-relative custom-dots-2024"
             >
               <div class="px-1">
-                <h6 class="m-0">Residuos Aprovechables</h6>
-                <p class="number-large font-weight-bold">349.410</p>
+                <h6 class="m-0">Huella Hídrica Coveñas</h6>
+                <p class="number-large font-weight-bold">278.597</p>
+                <p class="text-gray-light-ocensa">HH TOTAL OCENSA 2022</p>
                 <span
-                  class="bg-gray-light-ocensa d-block px-2 py-1 rounded-pill text-white font-weight-bold mt-2"
-                  >KG</span
+                  class="bg-gray-light-ocensa d-block px-2 py-1 rounded-pill text-white font-weight-bold mt-1"
+                  >4.024.403</span
                 >
               </div>
 
@@ -257,6 +258,27 @@
                   class="bg-gray-light-ocensa d-block px-2 py-1 rounded-pill text-white font-weight-bold mt-2"
                   >KG</span
                 >
+              </div>
+
+              <div class="px-1">
+                <h6 class="m-0">Huella Hídrica Total</h6>
+                <p class="number-large font-weight-bold">4.024.403</p>
+                <span
+                  class="bg-gray-light-ocensa d-block px-2 py-1 rounded-pill text-white font-weight-bold mt-1"
+                  >6,9%</span
+                >
+                <p style="font-size: 13px;" class="text-gray-light-ocensa">de la HHT de la organización</p>
+              </div>
+
+              <div class="px-1">
+                <h6 class="m-0">Emisiones GEI 2022</h6>
+                <p class="number-large font-weight-bold">3.574</p>
+                <p class="text-gray-light-ocensa">TonCOSe</p>
+                <span
+                  class="bg-gray-light-ocensa d-block px-2 py-1 rounded-pill text-white font-weight-bold mt-1"
+                  >1,04%</span
+                >
+                <p style="font-size: 13px;" class="text-gray-light-ocensa">emisiones de la organización</p>
               </div>
             </div>
           </div>
