feat: Agrega zona de Evacuacion Cerramiento On Shore

--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -7293,6 +7293,30 @@
                       </svg>
                     </span>
                   </div>
+                  
+                  <div
+                    class="dots-map-2024 dots-monitoreo d-none"
+                    id="covenas-sre-12"
+                  >
+                    <span
+                      style="scale: 1.13; position: absolute; left: 285px; top: 308px"
+                      class="location-map-zona"
+                    >
+                      <svg data-name="Grupo 647" xmlns="http://www.w3.org/2000/svg" width="585.689" height="275.847" viewBox="0 0 585.689 275.847">
+                          <defs>
+                              <clipPath id="g9r4fkxs1a">
+                                  <path data-name="Rectángulo 167" style="fill:#8d12ff;stroke:#8d12ff" d="M0 0h585.689v275.847H0z"/>
+                              </clipPath>
+                          </defs>
+                          <g data-name="Grupo 646" style="clip-path:url(#g9r4fkxs1a)">
+                              <path data-name="Trazado 861" d="M141.044 277.645a12.346 12.346 0 0 1-10.346-5.622L23.507 108.635a10.776 10.776 0 0 0-3.746-3.488L6.3 97.633a12.41 12.41 0 0 1 .057-21.343l105.885-62.47a12.341 12.341 0 0 1 7.035-1.7l8.223.484a12.458 12.458 0 0 1 1.825.244l358.529 75.404a12.411 12.411 0 0 1 8.666 17.448L440.8 223.687a12.344 12.344 0 0 1-3.124 4.105l-5.145 4.43a12.387 12.387 0 0 1-14.483 1.237l-4.339-2.6a10.821 10.821 0 0 0-6.651-1.472l-16.57 1.744a10.82 10.82 0 0 0-1.31.22l-68.245 15.888a12.44 12.44 0 0 1-2.451.319l-122.539 3.594a10.785 10.785 0 0 0-4.763 1.27l-44.24 23.731a12.448 12.448 0 0 1-5.9 1.494m-22.5-263.881a10.706 10.706 0 0 0-5.451 1.49L7.2 77.727a10.742 10.742 0 0 0-.066 18.463l13.44 7.5a12.467 12.467 0 0 1 4.326 4.03l107.19 163.388a10.686 10.686 0 0 0 14.059 3.574l44.24-23.732a12.456 12.456 0 0 1 5.5-1.469l122.54-3.594a10.765 10.765 0 0 0 2.121-.274l68.25-15.888a12.4 12.4 0 0 1 1.515-.255l16.57-1.744a12.477 12.477 0 0 1 7.684 1.7l4.339 2.6a10.729 10.729 0 0 0 12.537-1.072l5.144-4.43a10.687 10.687 0 0 0 2.7-3.553l55.718-117.991a10.742 10.742 0 0 0-7.5-15.1L128.981 14.479a10.842 10.842 0 0 0-1.58-.211l-8.223-.484a11.385 11.385 0 0 0-.639-.018m-5.874.772z" transform="translate(-.041 -2.006)" style="fill:#8d12ff;stroke:#8d12ff"/>
+                              <path data-name="Trazado 862" d="M141.044 277.645a12.346 12.346 0 0 1-10.346-5.622L23.507 108.635a10.776 10.776 0 0 0-3.746-3.488L6.3 97.633a12.41 12.41 0 0 1 .057-21.343l105.885-62.47a12.341 12.341 0 0 1 7.035-1.7l8.223.484a12.458 12.458 0 0 1 1.825.244l358.529 75.404a12.411 12.411 0 0 1 8.666 17.448L440.8 223.687a12.344 12.344 0 0 1-3.124 4.105l-5.145 4.43a12.387 12.387 0 0 1-14.483 1.237l-4.339-2.6a10.821 10.821 0 0 0-6.651-1.472l-16.57 1.744a10.82 10.82 0 0 0-1.31.22l-68.245 15.888a12.44 12.44 0 0 1-2.451.319l-122.539 3.594a10.785 10.785 0 0 0-4.763 1.27l-44.24 23.731a12.448 12.448 0 0 1-5.896 1.492zM118.54 13.766a10.706 10.706 0 0 0-5.451 1.49L7.2 77.727a10.742 10.742 0 0 0-.066 18.463l13.44 7.5a12.467 12.467 0 0 1 4.326 4.03l107.19 163.388a10.686 10.686 0 0 0 14.059 3.574l44.24-23.732a12.456 12.456 0 0 1 5.5-1.469l122.54-3.594a10.765 10.765 0 0 0 2.121-.274l68.25-15.888a12.4 12.4 0 0 1 1.515-.255l16.57-1.744a12.477 12.477 0 0 1 7.684 1.7l4.339 2.6a10.729 10.729 0 0 0 12.537-1.072l5.144-4.43a10.687 10.687 0 0 0 2.7-3.553l55.718-117.991a10.742 10.742 0 0 0-7.5-15.1L128.981 14.479a10.842 10.842 0 0 0-1.58-.211l-8.223-.484a12.351 12.351 0 0 0-.638-.018zm-5.874.772z" transform="translate(-.041 -2.006)" style="stroke-miterlimit:10;stroke-width:.5px;fill:#8d12ff;stroke:#8d12ff"/>
+                              <path data-name="Trazado 863" d="m669.7 94.051-34.652-.008-48.939-6.92-65.63-15.26 13.155-9.472-24.82-32.767L571.523.292l27.807 22.842 28.875-3.983.278.5zm-34.477-1.668h31.646L627.3 20.96l-28.467 3.927-27.556-22.638-59.887 28.012L536 62.746l-11.562 8.324 61.98 14.413z" transform="translate(-84.369 -.048)" style="fill:#8d12ff;stroke:#8d12ff"/>
+                              <path data-name="Trazado 864" d="m669.7 94.051-34.652-.008-48.939-6.92-65.63-15.26 13.155-9.472-24.82-32.767L571.523.292l27.807 22.842 28.875-3.983.278.5zm-34.477-1.668h31.646L627.3 20.96l-28.467 3.927-27.556-22.638-59.887 28.012L536 62.746l-11.562 8.324 61.98 14.413z" transform="translate(-84.369 -.048)" style="stroke-miterlimit:10;stroke-width:.5px;fill:#8d12ff;stroke:#8d12ff"/>
+                          </g>
+                      </svg>
+                    </span>
+                  </div>
 
                   <div
                     class="dots-map-2024 dots-monitoreo d-none"
