--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terminal marítimo coveñas</title>
+    <title>Cusiana</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
@@ -29,25 +29,26 @@
   </head>
   <body class="body-2024">
     <div class="container-ocensa-2024">
-      <section style="--opacity: .6" class="bg-dark banner-principal py-5 position-relative layer-opacity-banner">
+      <section style="background-image: url('/assets/img/cusiana/estacion-cusiana-portada.webp'); --opacity: .3" class="bg-dark banner-principal py-5 position-relative layer-opacity-banner">
         <div class="container-banner-principal">
           <div class="row align-items-center">
             <div class="col-xs-12 col-lg-6">
               <h1
-                class="banner-principal__title text-light text-uppercase font-weight-bold"
+                class="banner-principal__title text-light font-weight-bold"
               >
-                TERMINAL MARÍTIMO COVEÑAS
+                Estación <br>
+                CUSIANA
               </h1>
               <h2
                 class="banner-principal__subtitle text-light font-weight-bold"
               >
-                Línea sur / Segmento 1
+                Línea norte / Segmento 3
               </h2>
               <p class="banner-principal__description text-light">
-                A cinco minutos de Tauramena está la estación Cusiana, que
-                aporta el 50% del transporte del oleoducto, recibe producción de
-                los campos Cusiana y Cupiagua, de las líneas ODL y Araguaney, y
-                cuenta con un descargadero para 80.000 barriles diarios.
+                En Coveñas, Sucre, terminan 836 km de oleoducto subterráneo y
+                comienzan 12 km de oleoducto submarino. La estación abarca
+                960.556 m2 en una zona costera estratégica, con temperatura
+                promedio de 27ºC.
               </p>
               <div
                 style="gap: 10px; box-sizing: border-box"
@@ -58,11 +59,11 @@
                   src="/assets/img/grupo-765.webp"
                   alt=""
                 />
-                <img class="img-fluid" src="/assets/img/grupo-766.svg" alt="" />
-                <img class="img-fluid" src="/assets/img/grupo-767.svg" alt="" />
-                <img class="img-fluid" src="/assets/img/grupo-768.svg" alt="" />
-                <img class="img-fluid" src="/assets/img/grupo-769.svg" alt="" />
-                <img class="img-fluid" src="/assets/img/grupo-770.svg" alt="" />
+                <img class="img-fluid" src="/assets/img/cusiana/ahorra-o-nunca.svg" alt="" />
+                <img class="img-fluid" src="/assets/img/cusiana/repite-el-ciclo.svg" alt="" />
+                <img class="img-fluid" src="/assets/img/cusiana/echando-raices.svg" alt="" />
+                <img class="img-fluid" src="/assets/img/cusiana/preparados.svg" alt="" />
+                <img class="img-fluid" src="/assets/img/cusiana/nos-relacionamos.svg" alt="" />
               </div>
             </div>
             <div class="col-xs-12 col-lg-6">
@@ -100,101 +101,101 @@
             >
               <div
                 class="d-flex flex-column flex-lg-row align-items-center text-center text-lg-left"
-                style="min-height: 130px"
+                style="min-height: 130px;"
               >
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
                     class="w-100 mx-auto mx-lg-0 mb-3 mb-lg-0"
                     src="/assets/img/icons/vector-smart-object.svg"
                     alt=""
-                    style="max-height: 70px"
+                    style="max-height: 70px;"
                   />
                 </div>
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
-                    <b>Recibe todos los volúmenes</b> que transporta el
-                    oleoducto.
+                    <b>La estación aporta el 50%</b> de los volúmenes transportados por el oleoducto.
                   </p>
                 </div>
               </div>
 
               <div
                 class="d-flex flex-column flex-lg-row align-items-center text-center text-lg-left"
-                style="min-height: 130px"
+                style="min-height: 130px;"
               >
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
                     class="w-100 mx-auto mx-lg-0 mb-3 mb-lg-0"
-                    src="/assets/img/icons/covenas-el-terminal-2.svg"
+                    src="/assets/img/icons/cusiana-terminal-2.svg"
                     alt=""
-                    style="max-height: 70px"
+                    style="max-height: 70px;"
                   />
                 </div>
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
-                    Despacha los crudos de exportación hacia las unidades de
-                    carga de <b>tanqueros TLU</b>, localizadas costa afuera.
+                    Recibe la producción de petróleo crudo de los campos:
+                    <ul class="d-flex flex-row flex-wrap p-0 pl-3 text-light">
+                        <li  style="--color-marker: #e3ff00" class="mr-4 custom-color-marker p-0">Cusiana</li>
+                        <li  style="--color-marker: #e3ff00" class="mr-4 custom-color-marker p-0">Cupiagua</li>
+                        <li  style="--color-marker: #e3ff00" class="mr-4 custom-color-marker p-0">ODL</li>
+                        <li  style="--color-marker: #e3ff00" class="mr-4 custom-color-marker p-0">Araguaney</li>
+                    </ul>
                   </p>
                 </div>
               </div>
 
               <div
                 class="d-flex flex-column flex-lg-row align-items-center text-center text-lg-left"
-                style="min-height: 130px"
+                style="min-height: 130px;"
               >
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
                     class="w-100 mx-auto mx-lg-0 mb-3 mb-lg-0"
-                    src="/assets/img/icons/covenas-el-terminal-3.svg"
+                    src="/assets/img/icons/cusiana-terminal-3.svg"
                     alt=""
-                    style="max-height: 70px"
+                    style="max-height: 70px;"
                   />
                 </div>
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
-                    Capacidad de almacenamiento aproximado para diferentes
-                    calidades de: <b>2.800.000 Barriles de crudo</b>
+                    Tiene un descargadero de carro tanques para recibir <b>80.000 Barriles</b> diarios que opera las <b>24 HRS</b>.
                   </p>
                 </div>
               </div>
 
               <div
                 class="d-flex flex-column flex-lg-row align-items-center text-center text-lg-left"
-                style="min-height: 130px"
+                style="min-height: 130px;"
               >
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
                     class="w-100 mx-auto mx-lg-0 mb-3 mb-lg-0"
-                    src="/assets/img/icons/covenas-el-terminal-4.svg"
+                    src="/assets/img/icons/cusiana-terminal-4.svg"
                     alt=""
-                    style="max-height: 70px"
-                  />
+                    style="max-height: 70px;"
+                    />
                 </div>
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
-                    Posee una capacidad máxima de bombeo de:
-                    <b>60 Barriles</b> por hora hacia TLU2
+                    Ofrece a nuestros clientes diferentes <b>esquemas operacionales</b> dependiendo de sus necesidades para el transporte de crudo.
                   </p>
                 </div>
               </div>
 
               <div
                 class="d-flex flex-column flex-lg-row align-items-center text-center text-lg-left"
-                style="min-height: 130px"
+                style="min-height: 130px;"
               >
                 <div class="col-xs-12 col-md-3 px-2">
                   <img
                     class="w-100 mx-auto mx-lg-0 mb-3 mb-lg-0"
                     src="/assets/img/icons/covenas-el-terminal-5.svg"
                     alt=""
-                    style="max-height: 70px"
+                    style="max-height: 70px;"
                   />
                 </div>
                 <div class="col-xs-12 col-md-9 px-2">
                   <p class="text-light">
-                    El sistema de este terminal
-                    <b>permite la interacción con otras filiales</b> para, de
-                    ser necesario, aumentar el almacenamiento.
+                    El sistema de este terminal <b>permite la interacción con otras filiales</b> para, de ser necesario, aumentar el almacenamiento.
                   </p>
                 </div>
               </div>
@@ -213,7 +214,7 @@
             <a
               data-target="info-manual-ambiental"
               href="#"
-              class="text-gray-light-ocensa font-weight-bold font-calibri link-menu"
+              class="text-gray-light-ocensa font-weight-bold font-calibri link-menu disabled"
               >Manual <br />
               Ambiental</a
             >
@@ -224,7 +225,7 @@
             <a
               href="#"
               data-target="info-operaciones"
-              class="text-gray-light-ocensa font-weight-bold font-calibri link-menu"
+              class="text-gray-light-ocensa font-weight-bold font-calibri link-menu disabled"
               >Operaciones</a
             >
             <span
@@ -234,7 +235,7 @@
             <a
               href="#"
               data-target="info-sre"
-              class="text-gray-light-ocensa font-weight-bold font-calibri link-menu"
+              class="text-gray-light-ocensa font-weight-bold font-calibri link-menu disabled"
               >Sistema de Respuesta <br />
               Emergencias (SRE)</a
             >
@@ -247,18 +248,8 @@
               class="card-ocensa-carousel position-relative custom-dots-2024"
             >
               <div class="px-1">
-                <h6 class="m-0">Huella Hídrica Coveñas</h6>
-                <p class="number-large font-weight-bold">278.597</p>
-                <p class="text-gray-light-ocensa">HH TOTAL OCENSA 2022</p>
-                <span
-                  class="bg-gray-light-ocensa d-block px-2 py-1 rounded-pill text-white font-weight-bold mt-1"
-                  >4.024.403</span
-                >
-              </div>
-
-              <div class="px-1">
                 <h6 class="m-0">Residuos Aprovechables</h6>
-                <p class="number-large font-weight-bold">349.410</p>
+                <p class="number-large font-weight-bold">NA</p>
                 <span
                   class="bg-gray-light-ocensa d-block px-2 py-1 rounded-pill text-white font-weight-bold mt-2"
                   >KG</span
@@ -266,28 +257,31 @@
               </div>
 
               <div class="px-1">
+                <h6 class="m-0">Huella hídrica estación:</h6>
+                <p style="font-size: 25px;" class="number-large font-weight-bold">202.430,84 m3</p>
+              </div>
+
+              
+
+              <div class="px-1">
                 <h6 class="m-0">Huella Hídrica Total</h6>
-                <p class="number-large font-weight-bold">4.024.403</p>
+                <p style="font-size: 25px;" class="number-large font-weight-bold">4.024.403 m3</p>
                 <span
                   class="bg-gray-light-ocensa d-block px-2 py-1 rounded-pill text-white font-weight-bold mt-1"
-                  >6,9%</span
+                  >4,6%</span
                 >
-                <p style="font-size: 13px" class="text-gray-light-ocensa">
-                  de la HHT de la organización
-                </p>
+                <p style="font-size: 13px;" class="text-gray-light-ocensa">de la HHT de la estación</p>
               </div>
 
               <div class="px-1">
-                <h6 class="m-0">Emisiones GEI 2022</h6>
-                <p class="number-large font-weight-bold">3.574</p>
+                <h6 class="m-0">Emisiones GEI</h6>
+                <p class="number-large font-weight-bold">44.265,43</p>
                 <p class="text-gray-light-ocensa">TonCOSe</p>
                 <span
                   class="bg-gray-light-ocensa d-block px-2 py-1 rounded-pill text-white font-weight-bold mt-1"
-                  >1,04%</span
+                  >12,98%</span
                 >
-                <p style="font-size: 13px" class="text-gray-light-ocensa">
-                  emisiones de la organización
-                </p>
+                <p style="font-size: 13px;" class="text-gray-light-ocensa">emisiones de la estación</p>
               </div>
             </div>
           </div>
@@ -5494,21 +5488,15 @@
                   >
                     <span class="accordion-title__text">Incendio</span>
                     <span class="accordion-title__arrow d-block d-md-none">
-                      <img
-                        src="/assets/img/icons/arrow-glyph-down.svg"
-                        alt=""
-                      />
+                      <img src="/assets/img/icons/arrow-glyph-down.svg" alt="" />
                     </span>
                   </h6>
 
-                  <div
-                    id="accordion-item-incendio"
-                    class="accordion-item flex-column"
-                  >
+                  <div id="accordion-item-incendio" class="accordion-item flex-column">
                     <h5 style="font-size: 14px" class="text-gray-light-ocensa">
                       Off Shore - Leyenda
                     </h5>
-
+  
                     <div class="row mt-3">
                       <div class="col-12">
                         <div
@@ -5611,7 +5599,7 @@
                         </div>
                       </div>
                     </div>
-
+  
                     <h5
                       style="font-size: 14px"
                       class="text-gray-light-ocensa mt-4"
@@ -5696,7 +5684,7 @@
                           </div>
                         </div>
                       </div>
-
+  
                       <div class="col-12 col-lg-6">
                         <div
                           data-target="covenas-sre-15"
@@ -5772,24 +5760,20 @@
                   </div>
                 </div>
 
-                <div class="card-interactive-icons px-3 px-lg-5 py-3 mt-lg-3">
-                  <h6
-                    data-accordion="accordion-item-primeros-auxilios"
-                    class="accordion-title d-flex d-md-block align-items-center justify-content-between card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
-                  >
-                    <span class="accordion-title__text">Primeros Auxilios</span>
-                    <span class="accordion-title__arrow d-block d-md-none">
-                      <img
-                        src="/assets/img/icons/arrow-glyph-down.svg"
-                        alt=""
-                      />
-                    </span>
-                  </h6>
+                <div
+                  class="card-interactive-icons px-3 px-lg-5 py-3 mt-lg-3"
+                >
+                <h6
+                  data-accordion="accordion-item-primeros-auxilios"
+                  class="accordion-title d-flex d-md-block align-items-center justify-content-between card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
+                >
+                  <span class="accordion-title__text">Primeros Auxilios</span>
+                  <span class="accordion-title__arrow d-block d-md-none">
+                    <img src="/assets/img/icons/arrow-glyph-down.svg" alt="" />
+                  </span>
+                </h6>
 
-                  <div
-                    id="accordion-item-primeros-auxilios"
-                    class="accordion-item row mt-lg-3"
-                  >
+                  <div id="accordion-item-primeros-auxilios" class="accordion-item row mt-lg-3">
                     <div class="col-12 col-lg-6">
                       <div
                         data-target="covenas-sre-16"
@@ -5988,7 +5972,9 @@
             </div>
           </div>
           <div id="col-map" class="col px-0">
-            <div class="text-center position-relative wrapper-scroll">
+            <div
+              class="text-center position-relative wrapper-scroll"
+            >
               <div
                 id="container-map-terminal-2024"
                 style="width: 1070px; margin: 0 auto"
@@ -7086,7 +7072,7 @@
                 <img
                   id="map-terminal-2024"
                   class="img-fluid map-terminal-2024"
-                  src="/assets/img/grupo-771.webp"
+                  src="/assets/img/cusiana/mapa-cusiana.webp"
                   alt=""
                 />
               </div>
@@ -7197,7 +7183,7 @@
                   <h5 class="font-weight-bold text-light m-0">
                     Permiso de Vertimientos
                   </h5>
-                  <p class="text-light">(Resolución 2-9405 de 2022)</p>
+                  <p class="text-light">(Resolución 500.36-23-0698 de 2023)</p>
                   <a
                     class="button-oc-2024 color-light my-2 d-inline-block"
                     href=""
