--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -1816,43 +1816,20 @@
                       <div
                         class="card-interactive-icons___box-icon small"
                         style="--border-fill: #27ff00">
-                        <svg
-                          data-name="Grupo 677"
-                          xmlns="http://www.w3.org/2000/svg"
-                          width="33.588"
-                          height="53.591"
-                          viewBox="0 0 33.588 53.591">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="19" viewBox="0 0 22 19">
                           <defs>
-                            <clippath id="ih8bvvy6ha">
-                              <path
-                                data-name="Rectángulo 185"
-                                style="fill: #707070"
-                                d="M0 0h33.588v53.591H0z" />
-                            </clippath>
+                              <clipPath id="4nxibx56oa">
+                                  <path data-name="Rectángulo 438" style="fill:#707070" d="M0 0h22v19H0z"/>
+                              </clipPath>
                           </defs>
-                          <g
-                            data-name="Grupo 676"
-                            style="clip-path: url(#ih8bvvy6ha)">
-                            <path
-                              data-name="Trazado 1186"
-                              d="M34.266 9.546c-.008-.025-.033-.042-.042-.067a.741.741 0 0 0-.151-.209c-.008-.008-.008-.008-.008-.017l-4.413-4.02a.008.008 0 0 1-.008-.008V1.993A2 2 0 0 0 27.651 0H11.272a2 2 0 0 0-1.993 1.993v3.24a.008.008 0 0 0-.008.008l-4.413 4.02c-.008.008-.008.008-.008.017a1.145 1.145 0 0 0-.151.2.294.294 0 0 0-.042.067.885.885 0 0 0-.067.335v39.784a.84.84 0 0 0 .837.837h7.712v2.252a.84.84 0 0 0 .837.837h10.97a.84.84 0 0 0 .837-.837V50.5H33.5a.84.84 0 0 0 .837-.837V9.881a.75.75 0 0 0-.067-.335m-1.6 3.9H6.265v-2.73h26.4zM30.5 38.1V23.379a.838.838 0 0 0-.427-.729l-5.585-3.132v-4.387h8.173V38.1zm-24.233 0V15.114H14.5V19.5l-5.581 3.134a.831.831 0 0 0-.427.728v7.57a.757.757 0 0 0-.059.31v6.841H6.265zm16.544-22.986V20a.838.838 0 0 0 .427.728l5.585 3.132v6.556h-2.11v-3.587a.84.84 0 0 0-.837-.837H22.5a.84.84 0 0 0-.837.837v3.584h-4.4v-3.584a.84.84 0 0 0-.837-.837h-3.379a.84.84 0 0 0-.837.837v3.584h-2.052v-6.548l5.585-3.132a.831.831 0 0 0 .428-.733v-4.877h6.64zm2.227 15.3h-1.7v-2.748h1.7zm-9.454 0h-1.7v-2.748h1.7zm-5.476 1.675h18.723v6H10.108zm-3.843 7.685h26.4v2.16h-26.4zm4.689-37.781a.318.318 0 0 1 .318-.318h16.379a.318.318 0 0 1 .318.318v3.023H10.954zm-.787 4.7h18.6l2.579 2.345H7.588zm13.942 45.223h-9.295V50.5h9.295v1.415m.837-3.09H6.265v-5.216h26.4v5.217z"
-                              transform="translate(-.747)"
-                              style="fill: #707070" />
-                            <path
-                              data-name="Trazado 1187"
-                              d="M.837 44.99a.84.84 0 0 0-.837.837V47.6a.837.837 0 1 0 1.675 0v-1.773a.834.834 0 0 0-.837-.837"
-                              transform="translate(0 -7.317)"
-                              style="fill: #707070" />
-                            <path
-                              data-name="Trazado 1188"
-                              d="M.837 21.62a.84.84 0 0 0-.837.837V38.61a.837.837 0 0 0 1.675 0V22.457a.834.834 0 0 0-.837-.837"
-                              transform="translate(0 -3.516)"
-                              style="fill: #707070" />
+                          <g data-name="Grupo 1208" style="clip-path:url(#4nxibx56oa)">
+                              <path data-name="Trazado 2306" d="M21.549 14.837h-.392a2.472 2.472 0 0 0 .745-1.766v-2.827a2.473 2.473 0 0 0-2.12-2.444V6.005h.353a.353.353 0 0 0 .283-.565l-1.06-1.413a.353.353 0 0 0-.283-.141H14.13a.353.353 0 0 0-.283.141L12.788 5.44a.354.354 0 0 0 .283.565h.353v1.767H11.3v-.354a.353.353 0 0 0-.353-.353h-.562L7.772 4.444v-1.18l.668-1.339a.377.377 0 0 0 .039-.159V.353A.353.353 0 0 0 8.125 0H4.592a.353.353 0 0 0-.353.353v1.413a.372.372 0 0 0 .039.155l.668 1.342v.975h-3.18a.353.353 0 0 0-.353.353v.353H.353A.353.353 0 0 0 0 5.3v2.825a.353.353 0 0 0 .353.353h1.06v6.359H.353A.353.353 0 0 0 0 15.19v2.12a.353.353 0 0 0 .353.353h1.194l-.452.9a.351.351 0 0 0 .318.512h1.413a.356.356 0 0 0 .194-.06l2.031-1.353h11.8l2.028 1.353a.356.356 0 0 0 .2.06h1.413a.353.353 0 0 0 .314-.512l-.449-.9h1.194a.353.353 0 0 0 .353-.353v-2.12a.353.353 0 0 0-.353-.353m-.351-4.593v2.826a1.767 1.767 0 0 1-1.418 1.73V8.514a1.767 1.767 0 0 1 1.418 1.73m-6.893-5.652H18.9l.53.707h-5.653zm2.649 1.766a.353.353 0 1 1-.353-.353.353.353 0 0 1 .353.353m-2.826-.353h1.477a1.06 1.06 0 1 0 2.056.353.983.983 0 0 0-.067-.353h1.48v1.767H14.13zm4.946 2.473v.707h-5.652v.707h5.652v.708h-5.652v.7h5.652v.707h-5.652v.707h5.652v.707h-5.652v.707h5.652v.707H11.3v-1.411h1.06a.353.353 0 0 0 .353-.353v-2.827a.353.353 0 0 0-.353-.353H11.3V8.478zM11.3 10.6h.707v2.12H11.3zM7.1 3.02a.354.354 0 0 0-.039.159v6.359H5.652V3.179a.354.354 0 0 0-.039-.159l-.449-.9h2.389zm-1.8 7.224h2.12a.353.353 0 0 0 .353-.353v-.915l1.413 1.413v2.328H4.239V8.478h.707v1.413a.353.353 0 0 0 .353.353m4.592-2.472h.709v7.772h-.709zm-.477-.682a.353.353 0 0 0-.23.329V9.39L7.772 7.977V5.444zM4.946.707h2.826v.707H4.946zM.707 5.652h.707v2.12H.707zM2.72 18.369h-.735l.353-.707H3.78zm2.226-1.413h-.707V15.9a.353.353 0 1 1 .707 0zm2.826 0h-.707V15.9a.353.353 0 1 1 .707 0zm12.145 1.413h-.735l-1.06-.707h1.441zm1.283-1.413H8.478V15.9a1.06 1.06 0 0 0-2.12 0v1.06h-.706V15.9a1.06 1.06 0 0 0-2.12 0v1.06H.707v-1.417h1.06a.353.353 0 0 0 .353-.353V4.946h2.826v2.826h-1.06a.353.353 0 0 0-.353.353v4.946a.353.353 0 0 0 .353.353h5.3V15.9a.353.353 0 0 0 .353.353h1.413a.353.353 0 0 0 .348-.353v-.353h9.9z" style="fill:#707070"/>
                           </g>
                         </svg>
                       </div>
                       <div class="card-interactive-icons___box-description">
-                        <p>Desaireadores</p>
+                        <p>Tanques <br>
+                          Desaireadores</p>
                       </div>
                     </div>
 
