feat: ubicacion puntos cusiana operaciones hasta bombas de transferencia

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -4221,36 +4221,47 @@
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-1">
                     <span
-                      style="--outline-color: #27ff00; left: 462px; top: 336px"
+                      style="--outline-color: #27ff00; left: 743px; top: 224px;"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-2">
                     <span
-                      style="--outline-color: #27ff00; left: 486px; top: 346px"
+                      style="--outline-color: #27ff00; left: 679px; top: 215px;"
                       class="location-map-dot"></span>
+
+                    <span
+                    style="--outline-color: #27ff00; left: 683px; top: 254px;"
+                    class="location-map-dot"></span>
+
+                    <span
+                    style="--outline-color: #27ff00; left: 692px; top: 298px;"
+                    class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-3">
                     <span
-                      style="--outline-color: #27ff00; left: 517px; top: 351px"
+                      style="--outline-color: #27ff00; left: 677px; top: 195px;"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-4">
                     <span
-                      style="--outline-color: #27ff00; left: 486px; top: 346px"
+                      style="--outline-color: #27ff00; left: 677px; top: 330px;"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-5">
                     <span
-                      style="--outline-color: #27ff00; left: 513px; top: 349px"
+                      style="--outline-color: #27ff00; left: 636px; top: 254px;"
                       class="location-map-dot"></span>
+                    <span
+                    style="--outline-color: #27ff00; left: 634px; top: 303px;"
+                    class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
