feat: ubicacion puntos cusiana operaciones hasta Tanque de Aire

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -4232,12 +4232,12 @@
                       class="location-map-dot"></span>
 
                     <span
-                    style="--outline-color: #27ff00; left: 683px; top: 254px;"
-                    class="location-map-dot"></span>
+                      style="--outline-color: #27ff00; left: 683px; top: 254px;"
+                      class="location-map-dot"></span>
 
                     <span
-                    style="--outline-color: #27ff00; left: 692px; top: 298px;"
-                    class="location-map-dot"></span>
+                      style="--outline-color: #27ff00; left: 692px; top: 298px;"
+                      class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
@@ -4260,89 +4260,88 @@
                       style="--outline-color: #27ff00; left: 636px; top: 254px;"
                       class="location-map-dot"></span>
                     <span
-                    style="--outline-color: #27ff00; left: 634px; top: 303px;"
-                    class="location-map-dot"></span>
+                      style="--outline-color: #27ff00; left: 634px; top: 303px;"
+                      class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-6">
                     <span
-                      style="--outline-color: #27ff00; left: 406px; top: 320px"
+                      style="--outline-color: #27ff00; left: 756px; top: 230px;"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-7">
                     <span
-                      style="--outline-color: #27ff00; left: 408px; top: 300px"
+                      style="--outline-color: #27ff00; left: 746px; top: 224px;"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-8">
                     <span
-                      style="--outline-color: #27ff00; left: 506px; top: 325px"
+                      style="--outline-color: #27ff00; left: 744px; top: 230px;"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-9">
                     <span
-                      style="--outline-color: #27ff00; left: 802px; top: 364px"
+                      style="--outline-color: #27ff00; left: 740px; top: 213px;"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-10">
                     <span
-                      style="--outline-color: #27ff00; left: 513px; top: 338px"
+                      style="--outline-color: #27ff00; left: 674px; top: 398px;"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-11">
                     <span
-                      style="--outline-color: #27ff00; left: 510px; top: 354px"
-                      class="location-map-dot"></span>
-
-                    <span
-                      style="--outline-color: #27ff00; left: 493px; top: 370px"
+                      style="--outline-color: #27ff00; left: 689px; top: 322px;"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-12">
-                    <span
+                    <!-- Corresponde a Separadores de Lámina corrugada -->
+                    <!-- <span
                       style="--outline-color: #27ff00; left: 467px; top: 323px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-13">
                     <span
-                      style="--outline-color: #27ff00; left: 440px; top: 354px"
+                      style="--outline-color: #27ff00; left: 652px; top: 407px;"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-14">
-                    <span
+                    <!-- Corresponde a Separador API -->
+                    <!-- <span
                       style="--outline-color: #27ff00; left: 490px; top: 343px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-15">
                     <span
-                      style="--outline-color: #27ff00; left: 419px; top: 349px"
+                      style="--outline-color: #27ff00; left: 668px; top: 200px;"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-16">
-                    <span
+                    <!-- Corresponde a Tanque de aire -->
+                    <!-- <span
                       style="--outline-color: #27ff00; left: 420px; top: 308px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
