fix: icono fauna estaciones mejor calidad

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -243,7 +243,7 @@
           <div style="background-color: #ecf7e8"
             class="mx-3 mx-lg-0 p-3 px-5 card-ocensa shadow rounded text-center rounded-lg">
             <h5 class="font-weight-bold">Flora y fauna</h5>
-            <img class="img-fluid" src="/assets/img/icons/rect-ngulo-56.webp"
+            <img class="img-fluid" src="/assets/img/icons/fauna.svg"
               alt />
             <a style="white-space: nowrap" class="d-block button-oc-2024 mt-3"
               href>Ver más</a>
