--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -299,7 +299,7 @@
             <h5 class="font-weight-bold">Flora y fauna</h5>
             <img
               class="img-fluid"
-              src="/assets/img/icons/rect-ngulo-56.webp"
+              src="/assets/img/icons/fauna.svg"
               alt=""
             />
             <a
