fix: ajuste titulo cambio climatico y ancho columnas

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -35,13 +35,10 @@
               </h1>
               <h2
                 class="banner-principal__subtitle text-light font-weight-bold">
-                Línea norte / Segmento 3
+                Línea sur / Segmento 1
               </h2>
               <p class="banner-principal__description text-light">
-                En Coveñas, Sucre, terminan 836 km de oleoducto subterráneo y
-                comienzan 12 km de oleoducto submarino. La estación abarca
-                960.556 m2 en una zona costera estratégica, con temperatura
-                promedio de 27ºC.
+                A cinco minutos de Tauramena está la estación Cusiana, que aporta el 50% del transporte del oleoducto, recibe producción de los campos Cusiana y Cupiagua, de las líneas ODL y Araguaney, y cuenta con un descargadero para 80.000 barriles diarios.
               </p>
               <div style="gap: 10px; box-sizing: border-box"
                 class="d-flex flex-row mt-3 mt-lg-5 mb-5 mb-lg-0 certifieds">
@@ -993,7 +990,7 @@
                   <div class="col-12 col-lg-6">
                     <h6 data-accordion="accordion-item-cambio-climatico"
                       class="accordion-title d-flex d-md-block align-items-center justify-content-between card-interactive-icons___title font-weight-bold text-gray-light-ocensa">
-                      <span class="accordion-title__text">Cambio
+                      <span class="accordion-title__text">Cambio <br class="d-none d-lg-block">
                         Climático</span>
                       <span class="accordion-title__arrow d-block d-md-none">
                         <img src="/assets/img/icons/arrow-glyph-down.svg" alt />
