--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -1388,7 +1388,7 @@
                       class="accordion-title d-flex d-md-block align-items-center justify-content-between card-interactive-icons___title font-weight-bold text-gray-light-ocensa"
                     >
                       <span class="accordion-title__text"
-                        >Cambio Climático</span
+                        >Cambio <br class="d-none d-lg-block"> Climático</span
                       >
                       <span class="accordion-title__arrow d-block d-md-none">
                         <img
