feat (cusiana): Agrega ubicaciones en el mapa para cusiana - operaciones

--- a/pages/cusiana/index.html
+++ b/pages/cusiana/index.html
@@ -4346,108 +4346,90 @@
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-17">
-                    <span
+                    <!-- corresponde a filtros en línea -->
+                    <!-- <span
                       style="--outline-color: #27ff00; left: 436px; top: 349px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-18">
-                    <span
+                    <!-- Corresponde a Filtros Tanque Desaireador -->
+                    <!-- <span
                       style="--outline-color: #27ff00; left: 510px; top: 354px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-19">
                     <span
-                      style="--outline-color: #27ff00; left: 451px; top: 343px"
-                      class="location-map-dot"></span>
-
-                    <span
-                      style="--outline-color: #27ff00; left: 495px; top: 350px"
+                      style="--outline-color: #27ff00; left: 627px; top: 322px"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-20">
-                    <span
+                    <!-- Corresponde a Tanque de Almacenamiento -->
+                    <!-- <span
                       style="--outline-color: #27ff00; left: 542px; top: 337px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-21">
                     <span
-                      style="--outline-color: #27ff00; left: 365px; top: 331px"
+                      style="--outline-color: #27ff00; left: 627px; top: 324px"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-22">
                     <span
-                      style="--outline-color: #27ff00; left: 595px; top: 412px"
-                      class="location-map-dot"></span>
-
-                    <span
-                      style="--outline-color: #27ff00; left: 680px; top: 447px"
-                      class="location-map-dot"></span>
-
-                    <span
-                      style="--outline-color: #27ff00; left: 736px; top: 389px"
-                      class="location-map-dot"></span>
-
-                    <span
-                      style="--outline-color: #27ff00; left: 782px; top: 342px"
-                      class="location-map-dot"></span>
-
-                    <span
-                      style="--outline-color: #27ff00; left: 756px; top: 318px"
-                      class="location-map-dot"></span>
-
-                    <span
-                      style="--outline-color: #27ff00; left: 809px; top: 319px"
-                      class="location-map-dot"></span>
-
-                    <span
-                      style="--outline-color: #27ff00; left: 789px; top: 296px"
+                      style="--outline-color: #27ff00; left: 671px; top: 329px"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-23">
                     <span
-                      style="--outline-color: #27ff00; left: 518px; top: 367px"
+                      style="--outline-color: #27ff00; left: 628px; top: 312px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #27ff00; left: 668px; top: 192px"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-24">
-                    <span
+                    <!-- Corresponde a filtros succión bombas principales -->
+                    <!-- <span
                       style="--outline-color: #27ff00; left: 413px; top: 315px"
                       class="location-map-dot"></span>
                     <span
                       style="--outline-color: #27ff00; left: 454px; top: 326px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-25">
-                    <span
+                    <!-- Corresponde a filtros de Aire -->
+                    <!-- <span
                       style="--outline-color: #21a605; left: 479px; top: 330px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-26">
-                    <span
+                    <!-- Corresponde a filtros de agua -->
+                    <!-- <span
                       style="--outline-color: #21a605; left: 399px; top: 437px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-27">
-                    <span
+                    <!-- Corresponde a filtros HAY -->
+                    <!-- <span
                       style="--outline-color: #21a605; left: 315px; top: 355px"
                       class="location-map-dot"></span>
                     <span
@@ -4455,79 +4437,107 @@
                       class="location-map-dot"></span>
                     <span
                       style="--outline-color: #21a605; left: 382px; top: 443px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-28">
-                    <span
+                    <!-- Corresponde a Filtro en linea -->
+                    <!-- <span
                       style="--outline-color: #21a605; left: 260px; top: 362px"
                       class="location-map-dot"></span>
                     <span
                       style="--outline-color: #21a605; left: 285px; top: 346px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-29">
                     <span
-                      style="--outline-color: #21a605; left: 302px; top: 393px"
+                      style="--outline-color: #21a605; left: 745px; top: 217px"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-30">
                     <span
-                      style="--outline-color: #21a605; left: 467px; top: 311px"
+                      style="--outline-color: #21a605; left: 674px; top: 203px"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-31">
                     <span
-                      style="--outline-color: #21a605; left: 491px; top: 324px"
+                      style="--outline-color: #21a605; left: 690px; top: 295px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #21a605; left: 686px; top: 260px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #21a605; left: 679px; top: 223px"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-32">
                     <span
-                      style="--outline-color: #21a605; left: 312px; top: 378px"
+                      style="--outline-color: #21a605; left: 755px; top: 220px"
+                      class="location-map-dot"></span>
+                    <span
+                      style="--outline-color: #21a605; left: 668px; top: 328px"
                       class="location-map-dot"></span>
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-33">
-                    <span
+                    <!-- Corresponde al tanque Desnatador de aceite -->
+                    <!-- <span
                       style="--outline-color: #21a605; left: 280px; top: 394px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-34">
-                    <span
+                    <!-- Corresponde a Tanque Desairadores -->
+                    <!-- <span
                       style="--outline-color: #21a605; left: 360px; top: 384px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-35">
-                    <span
+                    <!-- Corresponde a Bommbas de Transferencia -->
+                    <!-- <span
                       style="--outline-color: #21a605; left: 355px; top: 384px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-36">
-                    <span
+                    <!-- Corresponde a Inyección de Químico -->
+                    <!-- <span
                       style="--outline-color: #21a605; left: 368px; top: 456px"
-                      class="location-map-dot"></span>
+                      class="location-map-dot"></span> -->
                   </div>
 
                   <div class="dots-map-2024 dots-operaciones d-none"
                     id="cusiana-operaciones-37">
                     <span
-                      style="--outline-color: #21a605; left: 349px; top: 477px"
+                      style="--outline-color: #21a605; left: 746px; top: 212px"
+                      class="location-map-dot"></span>
+                  </div>
+
+                  <div class="dots-map-2024 dots-operaciones d-none"
+                    id="cusiana-operaciones-38">
+                    <span
+                      style="--outline-color: #21a605; left: 628px; top: 325px"
+                      class="location-map-dot"></span>
+                  </div>
+
+                  <div class="dots-map-2024 dots-operaciones d-none"
+                    id="cusiana-operaciones-39">
+                    <span
+                      style="--outline-color: #21a605; left: 627px; top: 321px"
                       class="location-map-dot"></span>
                   </div>
 
