--- a/pages/terminal-maritimo-covenas/index.html
+++ b/pages/terminal-maritimo-covenas/index.html
@@ -7868,7 +7868,7 @@
                 <img
                   id="map-terminal-2024"
                   class="img-fluid map-terminal-2024"
-                  src="/assets/img/grupo-771.webp"
+                  src="/assets/img/grupo-771 (1).webp"
                   alt=""
                 />
               </div>
